--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,9 @@ body {
   left: 0;
   width: 100vw;
   height: 100vh;
-  background: url("bg.avif") no-repeat center center fixed;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
   background-size: cover;
   z-index: 1;
 }
@@ -33,7 +35,8 @@ body {
   height: 55vh;
   left: 19vw;
   top: -9.4vh;
-  background: url("mahotsav.avif") no-repeat center center;
+  background-repeat: no-repeat;
+  background-position: center center;
   background-size: contain;
   z-index: 2;
 }
@@ -45,7 +48,8 @@ body {
   height: 116.7vh;
   left: 15vw;
   top: 32.1vh;
-  background: url("flower.avif") no-repeat center center;
+  background-repeat: no-repeat;
+  background-position: center center;
   background-size: contain;
   z-index: 3;
 }
@@ -57,7 +61,8 @@ body {
   height: 20vh;
   right: 0;
   top: -3vh;
-  background: url("vignan-logo.avif") no-repeat center center;
+  background-repeat: no-repeat;
+  background-position: center center;
   background-size: contain;
   z-index: 4;
 }
